css/style.css
:root {
    --black-color: #263238;
    --base-color: #BAEF00;
    --base-color-hover: #D9FF56;
    --base-color-active: #A3D200;
    --border-color: #E3E3E3;
    --placeholder-color: #8D8D8D;
    --price-color: #6C6C6C;
    --trasntion-duration: .3s;
}

html {
    box-sizing: border-box;
}

*,
::after,
::before {
    box-sizing: inherit;
}

body {
    font-size: 16px;
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
    color: var(--black-color);
    background-color: white;
}

img {
    max-width: 100%;
}

a {
    text-decoration: none;
}

.container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 0px 15px;
}

.header {
    background-color: var(--black-color);
}

.header__container {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.header__logo {
    display: block;
    background-color: var(--base-color);
    padding: 22px;
    transition: opacity var(--trasntion-duration), background-color var(--trasntion-duration);
    outline: none;
}

.header__logo:focus-visible {
    opacity: .8;
}

.header__logo:hover {
    background-color: var(--base-color-hover);
}

.header__logo:active{
    background-color: var(--base-color-active);
}


/* Hero */

.hero__container {
    display:flex;
    align-items: center;
    justify-content: space-between;
    padding-top: 80px;
    padding-bottom: 80px;
    gap: 30px;
}

.hero__container::after {
    content: "";
    display: block;
    flex-basis: 470px;
    height: 375px;
    background-image: url(../img/hero.svg);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

.hero__content {
    flex-basis: 484px;
}

.hero__title {
    font-size: 34px;
    margin-top: 0;
    margin-bottom: 20px;
}

.hero__desc {
    max-width: 360px;
    font-size: 20px;
    margin-top: 0;
    margin-bottom: 48px;
}

/* Callback form */

.callback {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.callback::before {
    content: "";
    display: block;
    background-image: url(../img/callback-left.jpg);
    background-size: cover;
    background-position: center;
}

.callback__right {
    padding: 72px 50px;
    background-image:linear-gradient(0deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 100%), url(../img/callback-right.jpg);
    background-size: cover;
    background-position: center;
    color: white;
}

.callback__title {
    font-size: 0;
    position: absolute;
    width: 0;
    height: 0;
    opacity: 0;
}

.callback__desc {
    margin-top: 0;
    max-width: 424px;
    font-size: 20px;
    margin-bottom: 20px;
}

/* Catalog */

.catalog {
    padding: 80px 0;
}

.catalog__list {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 30px;
    margin: 0;
    padding: 0;
    margin-top: 60px;
    list-style-type: none;
}

.catalog__item-big {
    grid-column: span 2;
}

.catalog__card {
    height: 100%; 
}

/* Link */

.default-link {
    color: var(--black-color);
    text-decoration: underline;
    transition: color var(--trasntion-duration), background-color var(--trasntion-duration);
}

.default-link:focus-visible {
    outline: none;
    background-color: var(--base-color);
}

.default-link:hover{
    color: var(--base-color-hover);
}

.default-link:active {
    color: var(--base-color-active);
}

/* Button */

.default-btn {
    display: inline-block;
    padding: 11px 47px;
    color: var(--black-color);
    border-radius: 12px;
    background-color: var(--base-color);
    border: none;
    outline: 1px solid transparent;
    outline-offset: 2px;
    transition: outline-color var(--trasntion-duration), background-color var(--trasntion-duration);
    cursor: pointer;
}

.default-btn:focus-visible {
    outline-color: var(--base-color);
}

.default-btn:hover {
    background-color: var(--base-color-hover);
}

/* Text Field */

.text-field {
    padding: 11px 16px 11px 16px;
    border-radius: 12px;
    border: 1px solid var(--border-color);
    outline: none;
    transition: border-color var(--trasntion-duration);
}

.text-field::placeholder {
    color: var(--placeholder-color);
}

.text-field:focus {
    border-color: var(--base-color);
}

/* Subtitle */

.subtitle {
    margin: 0;
    text-align: center;
    font-size: 34px;
    font-weight: 700;
}

/* Logo */

.logo {
    display: block;
    width: 154px;
}

/* Menu */

.menu__list {
    display: flex;
    align-items: center;
    gap: 50px;
    list-style: none;
    margin: 0;
    padding-left: 0;
}

.menu__link {
    color: white;
    outline: none;
    transition: color var(--trasntion-duration), background-color var(--trasntion-duration);
}

.menu__link:focus-visible {
    outline: none;
    color: var(--black-color);
    background-color: var(--base-color);
}

.menu__link:hover {
    color: var(--base-color-hover);
}

.menu__link:active {
    color: var(--base-color-active);
}

/* Callback form */

.callback-form {
    display: flex;
    gap: 16px;

}

.callback-form__input {
    flex-basis: 288px;

}

/* Product Card */

.product-card {
    display: flex;
    flex-direction: column;
    background-color: white;
    border-radius: 12px;
    border: 1px solid var(--border-color);
}

.product-card__img {
    flex-shrink: 0;
    height: 180px;
    width: 100%;
    display: block;
    border-top-right-radius: 12px;
    border-top-left-radius: 12px;
    object-fit: contain;
}

.product-card__body {
    display: flex;
    flex-basis: 100%;
    justify-content: space-between;
    flex-direction: column;
    padding: 15px;
}

.product-card__body-top {
    margin-bottom: 22px;
}

.product-card__title {
    margin-top: 0;
    margin-bottom: 10px;
    font-size: 22px;
    font-weight: 700;
}

.product-card__price {
    font-size: 18px;
    color: var(--price-color);
    font-weight: 700;
}

.product-card_big {
    border: none;
    position: relative;
    height: 350px;
}

.product-card__img_big {
    height: 100%;
    border-radius: 12px;
    object-fit: cover;
}

.product-card__body_big {
    position: absolute;
    bottom: 0;
    width: 100%;
    background-color: rgba(0,0,0,0.5);
    border-radius: 12px;
    color:white;
    align-items: flex-start;
}

.product-card__price_big {
    color:white;
}

.product-card__btn_big {
    width:initial;
}

@media (max-width: 740px) {

    .callback-form {
        flex-direction: column;
        display: flex;
        gap: 16px;

    }

    .callback-form__input {
        flex-basis: initial;
    }

    .product-card__img {
        height: 90px;
    }

    .product-card__body {
       padding: 10px;
    }

    .product-card__body-top {
        margin-bottom: 22px;
    }

    .product-card__title {
        font-size: 14px;
    }

    .product-card__price {
        font-size: 14px;
    }

    .product-card__img_big {
        height: 100%;
    }

    .product-card__btn_big {
        width:100%;
    }

    .header__container {
        display: block;
        padding-left: 0;
        padding-right: 0;
    }

    .header__logo {
        display: flex;
        justify-content: center;
    }

    .header__menu {
        padding: 20px 0;
        width: 100%;
        overflow-x: scroll;
    }

    .header__menu-list {
        padding-left: 15px;
        padding-right: 15px;
        width: fit-content;
    }

    .hero__container {
        padding-top: 40px;
        padding-bottom: 40px;
    }

    .hero__container::after {
        display: none;
    }

    .hero__title {
        font-size: 20px;
    }

    .callback {
        display: block;
    }

    .callback__right {
        padding-left: 15px;
        padding-right: 15px;
    }

    .callback::before {
        display: none;
    }

    .catalog {
        padding: 40px 0;
    }

    .catalog__list {
        grid-template-columns: repeat(2, 1fr);
        gap: 10px;
        margin-top: 30px;
    }
}

